# django-graphql-learning

./: README.md  pyproject.toml
books/: admin.py  models.py  schema.py
books/management/commands/: import_books.py
books/migrations/: 0001_initial.py
bookstore/: settings.py  urls.py
bookstore/bookstore/: settings.py
