[tool.poetry]
name = "django-graphql-learning"
version = "0.1.0"
description = "learning graphql with django"
authors = ["louispawaon <lpawaon@gmail.com>"]
readme = "README.md"
packages = [{include = "django_graphql_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
graphene-django = "^3.0.2"
graphene = "^3.2.2"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
